@@ -47,18 +47,6 @@
 	  software developers and users.</b></p>
 
 <pre>
-Press Contact:
-Leslie Proctor                          
-GNOME Foundation                        
-(801)446-4638                           
-proctors@pacbell.net                    
-
-Bob Thomas
-Director of Product Management
-Bitstream Inc.  
-(617)520-8376                   
-bthomas@bitstream.com
-
 NEW YORK, New York  January 22, 2003  
 
 In a move to fill the last remaining gap in font display
