@@ -1,3 +1,9 @@
+2003-01-27  Steve Fox  <drfickle@k-lug.org>
+
+	* press/pr-bitstreamfonts.html
+
+	Remove header info from press release
+
 2003-01-22  Steve Fox  <drfickle@k-lug.org>
 
 	* index.html
